content changes, ie/edge scrollsnap hotfix

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -73,9 +73,9 @@
 						</div>
 					</div>
 					<div class="column info-panel">
-						<h1>A Global eDetailing Development Partner to Brands and Agencies</h1>
+						<h1>A Global eDetailing Development Partner for Brands and Agencies</h1>
 						<p>We collaborate seamlessly with pharmaceutical companies and local agencies to develop, localise, adapt and distribute visual aids using the platform of your choice.</p>
-						<p>We work across platform - be it Veeva, IQVIA, eWizard or the platform of your choice.</p>
+						<p>We understand that local agencies often understand the local market best, and recommend that they do the design and strategy.</p>
 						<button class="btn light-blue" onclick="location.href='#contact'">
 							Request a Demo
 						</button>
@@ -92,7 +92,7 @@
 						<div>
 							<p>We develop visual aid (eDetailing) campaigns that utilise the full potential of your chosen multichannel platform.</p>
 							<p>We are platform agnostic and certified with Veeva, IQVIA MiTouch, IQVIA OCE and Viseven.</p>
-							<p>We’re a centralized development agency. We look after your assets, offer translation and localization services and maximize the use of your assets.</p>
+							<p>We’re a centralized development agency. We look after your assets, offer translation, and localization services and maximize the use of your assets.</p>
 						</div>
 					</div>
 					<div class="column bigger no-padding image-panel">
@@ -150,8 +150,8 @@
 					
 					<h3><span>IQVIA OCE</span></h3>
 					<p>OCE is an innovative strategy that enables Life Sciences companies to integrate customer-engagement activities across the organization, powered by strong information management.</p>
-					<p>We are certified to to navigate IQVIA’s revolutionary Orchestrated Customer Engagement Platform as well as to create platform-compliant content.</p>
-					<p>We have created OCE visual aids (e-Detailers) for several markets globally.</p>
+					<p>We are certified to navigate IQVIA’s revolutionary Orchestrated Customer Engagement Platform as well as to create platform-compliant content.</p>
+					<p>We have created OCE visual aids (eDetailers) for several markets globally.</p>
 					<div class="cert-icon-container wider">
 						<img src="./img/cert/iqvia_oce_logo.png">
 					</div>
@@ -221,20 +221,20 @@
 				<div class="grid">
 					<div class="column development">
 						<h3>Development</h3>
-						<p>We design and develop HTML5 visual aids using the platform of your choice. Our team of developers are experienced in eDetailer development and supported by strong design and quality check teams.</p>
+						<p>We design and develop HTML5 visual aids using the platform of your choice. Our team of developers is experienced in eDetailer development and supported by strong design and quality check teams.</p>
 					</div>
 					<div class="column localisation">
 						<h3>Localisation</h3>
-						<p>We use existing assets to localise edetailers to meet your country’s requirements, minimising cost and ensuring short delivery cycles.</p>
+						<p>We use existing assets to localise eDetailers to meet your country’s requirements, minimising cost and ensuring short delivery cycles.</p>
 					</div>
 					<div class="column translation">
 						<h3>Translation</h3>
-						<p>We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.</p>
+						<p>We provide full translation services, focusing on technical precision and accurately share information with the support of best-in-class technology.</p>
 					</div>
 					<div class="column transcreation">
 						<h3>Transcreation</h3>
-						<p>We also provide transcreation services. Ensuring maximum resonance in every region and market you serve.</p>
-						<p>We make sure the intended effect of your message doesn’t get lost in translation. We ensure your copy remains natural, culturally relevant, and dynamic—worldwide.</p>
+						<p>We also provide transcreation services ensuring maximum resonance in every region and market you serve.</p>
+						<p>We make sure the intended effect of your message doesn’t get lost in translation. Your copy will remain natural, culturally relevant, and dynamic — worldwide.</p>
 					</div>
 				</div>
 			</div>
@@ -256,11 +256,11 @@
 					</div>
 					<div class="column one">
 						<h3>Partnership</h3>
-						<p>We align ourselves to your operational and cultural needs. We’re confident in our development strengths and know where and how to work with agencies and specialist in your country.</p>
+						<p>We align ourselves to your operational and cultural needs. We’re confident in our development strengths and know how to work with agencies and specialists in your country.</p>
 					</div>
 					<div class="column two">
 						<h3>Flexible Delivery</h3>
-						<p>With the use of video conferencing, online meetings and efficient file sharing, we provide a connected and seamless service that works for you, irrespective of where you are.</p>
+						<p>Using video conferencing, online meetings and efficient file sharing, we provide a connected and seamless service that works for you, irrespective of where you are.</p>
 					</div>
 					<div class="column three">
 						<h3>Transparency</h3>
@@ -285,15 +285,15 @@
 					</div>
 					<div class="column three">
 						<h3>Design</h3>
-						<p>We create a visual framework from concept to wireframe to final product.</p>
+						<p>We create a visual framework from concept, wireframe and to the final product.</p>
 					</div>
 					<div class="column four">
 						<h3>Build</h3>
-						<p>We take the visual design and create a product that performs the way you need it to.</p>
+						<p>We take the visual design and create a product that performs the way you need it.</p>
 					</div>
 					<div class="column five">
 						<h3>Launch</h3>
-						<p>We have stringent quality checks and work on staging links before the final go live.</p>
+						<p>We have stringent quality checks and work on staging links before the final release.</p>
 					</div>
 				</div>
 				<div class="btn-container">
@@ -317,8 +317,8 @@
 							<h2><span class="light-blue-underline">About Us</span></h2>
 							<br>
 							<div>
-								<p>Vakils Premedia is a subsidiary of Vakils, a family business for over 70 years now.</p>
-								<p>It was founded in 2004 and began operations in 2007. We are based in India with a team size of 120 and with sales offices in the UK and the US.</p>
+								<p>Vakils Premedia is a subsidiary of Vakils, a 70-year old family-owned printing business that has won over 150 national awards for excellence in printing.</p>
+								<p>Founded in 2004, we have grown to an agile team of 120 people based in Mumbai, India, and have sales offices in the UK and US.</p>
 								<p>We work with clients across Europe, Asia Pacific, Australia, North and Latin America.</p>
 							</div>
 						</div>
@@ -332,7 +332,7 @@
 								</div>
 								<div>
 									<h3>IT Services</h3>
-									<p>IT services which include eDetailers, website design development and migrations, emailers and custom software.</p>
+									<p>IT services which include eDetailers, website design development and migrations, emailers, and custom software.</p>
 								</div>
 							</div>
 							<div class="column">
@@ -350,7 +350,7 @@
 								</div>
 								<div>
 									<h3>Premedia Services</h3>
-									<p>Premedia services which included Typesetting, colour retouching, image cutouts, data sheets etc.</p>
+									<p>Premedia services including typesetting, colour retouching, image cutouts, data sheets etc.</p>
 								</div>
 							</div>
 						</div>
