fix layouts for smaller screens, preload slider images, add banner for IE/Edge

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -58,13 +58,13 @@
 						<div class="slide-container">
 							<div class="frame-container slider">
 								<div class="slide">
-									<img rel="preload" src="./img/slides/slide1.jpg">
+									<img src="./img/slides/slide1.jpg">
 								</div>
 								<div class="slide">
-									<img rel="preload" src="./img/slides/slide2.jpg">
+									<img src="./img/slides/slide2.jpg">
 								</div>
 								<div class="slide">
-									<img rel="preload" src="./img/slides/slide3.jpg">
+									<img src="./img/slides/slide3.jpg">
 								</div>
 							</div>
 							<div class="pager-container">
@@ -323,7 +323,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="column bigger business-panel">
+					<div class="column bigger business-panel no-padding">
 						<h3>Our three main areas of business</h3>
 						<div class="grid">
 							<div class="column">
@@ -360,13 +360,13 @@
 		</div>
 		<div  id="contact" class="section dark-bg">
 			<div class="container">
-				<h2><span class="light-blue-underline">Let’s work together</span></h2>
 				<div class="grid">
 					<div class="column contact-info">
+						<h2><span class="light-blue-underline">Let’s work together</span></h2>
 						<h3>Talk to us</h3>
 						<p><a href="mailto:info@vakilspremedia.com">info@vakilspremedia.com</a></p>
 						<p>+91 22 2430 6780</p>
-						<br><br><br><br>
+						<br><br>
 						<h3>Visit us</h3>
 						<p><a href="https://goo.gl/maps/3WZwTQobTuJch1Vw8" target="_blank">Industry Manor</a>, 2nd Floor</p>
 						<p>Appasaheb Marathe Marg,</p>
@@ -425,6 +425,12 @@
 			<div class="copyright">
 				Copyright &copy; 2020 Vakils Premedia Pvt. Ltd.
 			</div>
+		</div>
+	</div>
+	<div class="bad-browser-warning">
+		<div>
+			<p>This website is not optimised for your browser.</p>
+			<p>Please use Chrome, Firefox, Safari or their mobile versions.</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="./js/scroll.js"></script>
