slider image onload

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -55,7 +55,7 @@
 				<div class="grid">
 					<div class="column">
 						<div class="slide-container">
-							<div class="frame-container slider">
+							<div class="slider">
 								<div class="slide">
 									<img src="./img/slides/slide1.jpg">
 								</div>
