padding consistency on mobile

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -300,7 +300,7 @@
 			</div>
 		</div>
 		<div id="map" class="section">
-			<div class="container no-max-width no-padding">
+			<div class="container no-max-width">
 				<h2 class="light-blue-underline"><span>Where Our Clients<br> Are Located</span></h2>
 				<div class="map-container">
 					<div id="jvectormap"></div>
