fix layout for edetail section, escape key to close modal, misc style fixes, window resize will always correct navbar handler, adjust threshold for IntersectionObserver

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -20,7 +20,7 @@
 		<div class="nav-container dark-bg">
 			<div class="left">
 				<div class="nav-logo">
-					<img src="./img/vakils-logo.png">
+					<a href="https://www.vakilspremedia.com/"><img src="./img/vakils-logo.png"></a>
 				</div>
 			</div>
 			<div class="right" id="navigation-menu">
@@ -85,8 +85,7 @@
 			<div class="container">
 				<div class="grid">
 					<div class="column info-panel">
-						<h2><span class="light-blue-underline">eDetailer</span><span class="light-blue-underline"> Development</span></h2>
-						<br>
+						<h2><span class="light-blue-underline">eDetailer Development</span></h2>
 						<div>
 							<p>We develop visual aid (eDetailing) campaigns that utilise the full potential of your chosen multichannel platform.</p>
 							<p>We are platform agnostic and certified with Veeva, IQVIA MiTouch, IQVIA OCE and Viseven.</p>
