--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -24,13 +24,13 @@
 				</div>
 			</div>
 			<div class="right" id="navigation-menu">
-				<span data-name="eDetailers" class="nav-item"><a onclick="checkNavbarBG(this)" href="#eDetailers">eDetailing</a></span>
-				<span data-name="certifications" class="nav-item"><a onclick="checkNavbarBG(this)" href="#certifications">Certifications</a></span>
-				<span data-name="services" class="nav-item"><a onclick="checkNavbarBG(this)" href="#services">Services</a></span>
-				<span data-name="how-we-work" class="nav-item"><a onclick="checkNavbarBG(this)" href="#how-we-work">How We Work</a></span>
-				<span data-name="map" class="nav-item"><a onclick="checkNavbarBG(this)" href="#map">Clients</a></span>
-				<span data-name="about" class="nav-item"><a onclick="checkNavbarBG(this)" href="#about">About Us</a></span>
-				<span data-name="contact" class="nav-item"><a onclick="checkNavbarBG(this)" href="#contact">Contact</a></span>
+				<span data-name="#eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></span>
+				<span data-name="#certifications" class="nav-item"><a href="#certifications">Certifications</a></span>
+				<span data-name="#services" class="nav-item"><a href="#services">Services</a></span>
+				<span data-name="#how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></span>
+				<span data-name="#map" class="nav-item"><a href="#map">Clients</a></span>
+				<span data-name="#about" class="nav-item"><a href="#about">About Us</a></span>
+				<span data-name="#contact" class="nav-item"><a href="#contact">Contact</a></span>
 			</div>
 			<div class="right" id="navigation-menu-mobile">
 				<input id="hamburger" type="checkbox">
@@ -38,13 +38,13 @@
 				<span class="hamburger-line"></span>
 				<span class="hamburger-line"></span>
 				<ul>
-					<li onclick="mobileNavigate(this)" data-name="eDetailers" class="nav-item"><span>eDetailing</span></li>
-					<li onclick="mobileNavigate(this)" data-name="certifications" class="nav-item"><span>Certifications</span></li>
-					<li onclick="mobileNavigate(this)" data-name="services" class="nav-item"><span>Services</span></li>
-					<li onclick="mobileNavigate(this)" data-name="how-we-work" class="nav-item"><span>How We Work</span></li>
-					<li onclick="mobileNavigate(this)" data-name="map" class="nav-item"><span>Clients</span></li>
-					<li onclick="mobileNavigate(this)" data-name="about" class="nav-item"><span>About Us</span></li>
-					<li onclick="mobileNavigate(this)" data-name="contact" class="nav-item"><span>Contact</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#eDetailers" class="nav-item"><span>eDetailing</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#certifications" class="nav-item"><span>Certifications</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#services" class="nav-item"><span>Services</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#how-we-work" class="nav-item"><span>How We Work</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#map" class="nav-item"><span>Clients</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#about" class="nav-item"><span>About Us</span></li>
+					<li onclick="mobileNavigate(this)" data-name="#contact" class="nav-item"><span>Contact</span></li>
 				</ul>
 			</div>
 		</div>
