--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="eDetailers" class="section">
+		<div id="eDetailers" class="section rendered">
 			<div class="container">
 				<div class="grid">
 					<div class="column info-panel">
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="certifications" class="section">
+		<div id="certifications" class="section rendered">
 			<div class="container">
 				<div class="section-title">
 					<h2><span class="light-blue-underline">Certifications</span></h2>
@@ -210,7 +210,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="services" class="section dark-bg">
+		<div id="services" class="section rendered dark-bg">
 			<div class="container bigger">
 				<div class="section-title">
 					<h2><span class="light-blue-underline">Services</span></h2>
@@ -236,7 +236,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="how-we-work" class="section">
+		<div id="how-we-work" class="section rendered">
 			<div class="container bigger">
 				<div class="section-title">
 					<h2><span class="light-blue-underline">How We Work</span></h2>
@@ -298,7 +298,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="map" class="section">
+		<div id="map" class="section rendered">
 			<div class="container no-max-width">
 				<h2 class="light-blue-underline"><span>Where Our Clients<br> Are Located</span></h2>
 				<div class="map-container">
@@ -306,7 +306,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="about" class="section">
+		<div id="about" class="section rendered">
 			<div class="container bigger">
 				<div class="grid">
 					<div class="column no-padding">
@@ -355,7 +355,7 @@
 				</div>
 			</div>
 		</div>
-		<div  id="contact" class="section dark-bg">
+		<div  id="contact" class="section rendered dark-bg">
 			<div class="container">
 				<div class="grid">
 					<div class="column contact-info">
