final version cleanup

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -8,7 +8,8 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/bbslider.css">
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
@@ -438,7 +439,9 @@
 			isIE = true;
 		}
 	</script>
-	<script type="text/javascript" src="./js/scroll.js"></script>
-	<script type="text/javascript" src="./js/scripts.js"></script>
+	<!-- <script type="text/javascript" src="./js/scroll.js"></script> -->
+	<script type="text/javascript" src="./js/scroll.min.js"></script>
+	<!-- <script type="text/javascript" src="./js/scripts.js"></script> -->
+	<script type="text/javascript" src="./js/scripts.min.js"></script>
 </body>
 </html>
