--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>E-Detailing Services | Vakils Premedia</title>
+	<title>eDetailing Services | Vakils Premedia</title>
 
 	<link rel="stylesheet" type="text/css" href="./css/bbslider.css">
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
