remove scroll snapping

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -8,7 +8,6 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/bbslider.css">
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
@@ -246,7 +245,7 @@
 					<span class="column"><span class="active" onclick="howWeWorkHandler(this, 'model')">Our Model</span></span>
 					<span class="column"><span onclick="howWeWorkHandler(this, 'process')">Our Process</span></span>
 				</div>
-				<div id="model" class="work-container grid active container no-padding">
+				<div id="model" class="work-container grid container no-padding">
 					<div class="timeline grid">
 						<div class="column"><div class="dot one"><span class="line one"></span></div></div>
 						<div class="column"><div class="dot two"><span class="line two"></span></div></div>
@@ -265,7 +264,7 @@
 						<p>We’re an open book. You’ll always have complete clarity on what is being done, by who, when and at what cost.</p>
 					</div>
 				</div>
-				<div id="process" class="grid work-container">
+				<div id="process" class="grid work-container hidden">
 					<div class="timeline grid">
 						<div class="column"><div class="dot one"><span class="line one"></span></div></div>
 						<div class="column"><div class="dot two"><span class="line two"></span></div></div>
@@ -439,9 +438,9 @@
 			isIE = true;
 		}
 	</script>
-	<!-- <script type="text/javascript" src="./js/scroll.js"></script> -->
-	<script type="text/javascript" src="./js/scroll.min.js"></script>
-	<!-- <script type="text/javascript" src="./js/scripts.js"></script> -->
-	<script type="text/javascript" src="./js/scripts.min.js"></script>
+	<script type="text/javascript" src="./js/scroll.js"></script>
+	<!-- <script type="text/javascript" src="./js/scroll.min.js"></script> -->
+	<script type="text/javascript" src="./js/scripts.js"></script>
+	<!-- <script type="text/javascript" src="./js/scripts.min.js"></script> -->
 </body>
 </html>
