bg-colors for navbar

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -16,8 +16,8 @@
 	<script type="text/javascript" src="./js/jvector.world.min.js"></script>
 </head>
 <body>
-	<nav>
-		<div class="nav-container dark-bg">
+	<nav class="dark-bg">
+		<div class="nav-container">
 			<div class="left">
 				<div class="nav-logo">
 					<a href="https://www.vakilspremedia.com/"><img src="./img/vakils-logo.png"></a>
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="certifications" class="section rendered">
+		<div id="certifications" class="section grey-bg rendered">
 			<div class="container">
 				<div class="section-title">
 					<h2><span class="light-blue-underline">Certifications</span></h2>
