load animations for next section halfway through the first section

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -24,13 +24,13 @@
 				</div>
 			</div>
 			<div class="right" id="navigation-menu">
-				<span data-name="#eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></span>
-				<span data-name="#certifications" class="nav-item"><a href="#certifications">Certifications</a></span>
-				<span data-name="#services" class="nav-item"><a href="#services">Services</a></span>
-				<span data-name="#how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></span>
-				<span data-name="#map" class="nav-item"><a href="#map">Clients</a></span>
-				<span data-name="#about" class="nav-item"><a href="#about">About Us</a></span>
-				<span data-name="#contact" class="nav-item"><a href="#contact">Contact</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#certifications" class="nav-item"><a href="#certifications">Certifications</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#services" class="nav-item"><a href="#services">Services</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#map" class="nav-item"><a href="#map">Clients</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#about" class="nav-item"><a href="#about">About Us</a></span>
+				<span onclick="desktopNavigate(this)" data-name="#contact" class="nav-item"><a href="#contact">Contact</a></span>
 			</div>
 			<div class="right" id="navigation-menu-mobile">
 				<input id="hamburger" type="checkbox">
@@ -50,7 +50,7 @@
 		</div>
 	</nav>
 	<div class="scroll-snap-container">
-		<div id="home" class="section dark-bg">
+		<div id="home" class="section dark-bg animated">
 			<div class="container">
 				<div class="grid">
 					<div class="column">
