Reduce height of certifications and map sections

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -74,7 +74,7 @@
 					<div class="column info-panel">
 						<h1>A Global eDetailing Development Partner for Brands and Agencies</h1>
 						<p>We collaborate seamlessly with pharmaceutical companies and local agencies to develop, localise, adapt and distribute visual aids using Veeva, IQVIA'S OCE, Mi Touch, eWizard or the platform of your choice.</p>
-						<button class="btn light-blue" onclick="location.href='#contact'">
+						<button class="btn light-blue" onclick="desktopNavigate(null, '#contact')">
 							Request a Demo
 						</button>
 					</div>
@@ -294,7 +294,7 @@
 					</div>
 				</div>
 				<div class="btn-container">
-					<button class="btn" onclick="location.href='#contact'">Get in Touch</button>
+					<button class="btn" onclick="desktopNavigate(null, '#contact')">Get in Touch</button>
 				</div>
 			</div>
 		</div>
