--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -1,3 +1,6 @@
+<?PHP
+	
+?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bbslider.css">
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
-	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
+	<script type="text/javascript" src="./js/jquery-3.5.0.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
 	<script type="text/javascript" src="./js/jvectormap.2.0.5.min.js"></script>
@@ -370,7 +373,7 @@
 						<p>Mumbai – 400 025, India</p>
 					</div>
 					<div class="column bigger contact-form-container">
-						<form class="contact-form disabled" action="" onsubmit="return validateContactForm(this)">
+						<form class="contact-form" onsubmit="return validateContactForm(this)">
 							<h3>Send us a message</h3>
 							<div class="row">
 								<div class="input-container">
@@ -387,7 +390,7 @@
 							<div class="row">
 								<div class="input-container">
 									<div class="error">&nbsp;</div>
-									<input type="number" name="phone" placeholder="+91 98200 12345">
+									<input type="tel" maxlength=13 name="phone" placeholder="+91 98200 12345">
 									<label for="phone">Phone Number</label>
 								</div>									
 								<div class="input-container">
@@ -405,6 +408,7 @@
 							</div>
 							<div class="btn-container">
 								<input type="submit" id="submit-btn" class="btn light-blue" name="submit" value="Send">
+
 								<div class="submit-message-failure">We are unable to process the form right now. Please contact us directly or try again later</div>
 							</div>
 							<div class="submit-message-success"><div>
@@ -412,10 +416,6 @@
 								<p>We will reach out to you soon!</p>
 							</div></div>
 						</form>
-						<div class="disabled-message"><div>
-							<p>We are unable to process forms right now.</p>
-							<p>Please contact us directly via email.</p>
-						</div></div>
 					</div>
 				</div>
 			</div>
