defer js because IE is dogshit

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -437,7 +437,7 @@
 	</script>
 	<script type="text/javascript" src="./js/scroll.js"></script>
 	<!-- <script type="text/javascript" src="./js/scroll.min.js"></script> -->
-	<script type="text/javascript" src="./js/scripts.js"></script>
+	<script type="text/javascript" defer="defer" src="./js/scripts.js"></script>
 	<!-- <script type="text/javascript" src="./js/scripts.min.js"></script> -->
 </body>
 </html>
