--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -386,8 +386,8 @@
 							</div>
 							<div class="row">
 								<div class="input-container">
-									<div class="error">&nbsp;</div>
-									<input type="tel" maxlength=13 name="phone" placeholder="+91 98200 12345">
+									<div class="error" id="error-phone">&nbsp;</div>
+									<input type="tel" maxlength=15 name="phone" placeholder="+91 98200 12345">
 									<label for="phone">Phone Number</label>
 								</div>									
 								<div class="input-container">
@@ -435,9 +435,6 @@
 			isIE = true;
 		}
 	</script>
-	<script type="text/javascript" src="./js/scroll.js"></script>
-	<!-- <script type="text/javascript" src="./js/scroll.min.js"></script> -->
-	<script type="text/javascript" defer="defer" src="./js/scripts.js"></script>
-	<!-- <script type="text/javascript" src="./js/scripts.min.js"></script> -->
+	<script type="text/javascript" src="./js/scripts.min.js"></script>
 </body>
 </html>
