--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -87,7 +87,7 @@
 		<div id="people" class=" text-white">
 			<div class="row no-gutters vh-100">
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-primary">
-					<div class="p-md-5 p-2">
+					<div class="pb-md-5 p-5 pb-2">
 						<div class="subtitle">Chairman's message</div>
 						<h2>Thinking Resilience. Thinking Scale.</h2>
 						<div class="subtitle font-weight-bold">Nandan M. Nilekani</div>
@@ -95,7 +95,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-danger">
-					<div class="p-md-5 p-2">
+					<div class="pb-md-5 p-5 pb-2">
 						<div class="subtitle">Letter to the Shareholder</div>
 						<h2>An exceptional year for Infosys</h2>
 						<div class="subtitle font-weight-bold">Salil Parekh</div>
@@ -111,13 +111,15 @@
 			<div class="row no-gutters">
 				<div class="col-md-6 vh-60 p-5 d-flex justify-content-center align-items-center">
 					<div>
-						<h2 class="pb-5 font-theme-blue font-weight-bold">Revenues</h2>
+						<h2 class="font-theme-blue font-weight-bold">Revenues</h2>
+						<div class="key text-body pb-3">(in crores)</div>
 						<img class="d-block img-fluid" src="img/Revenues.png">
 					</div>
 				</div>
 				<div class="col-md-6 vh-60 p-5 d-flex justify-content-center align-items-center bg-theme-dark-blue">
 					<div>
-						<h2 class="pb-5 text-white font-weight-bold">Net Profit</h2>
+						<h2 class="text-white font-weight-bold">Net Profit</h2>
+						<div class="key text-white pb-3">(in crores)</div>
 						<img class="d-block img-fluid" src="img/Net-Profit.png">
 					</div>
 				</div>
@@ -126,7 +128,7 @@
 				<div class="col-md-3 vh-25 vh-md-30 d-flex justify-content-center align-items-center">
 					<div class="text-center">
 						<h4 class="font-weight-bold">Free cash flow</h4>
-						<div class="key">(in crores)</div>
+						<div class="key text-white">(in crores)</div>
 						<h1 class="font-weight-bold">15,250</h1>
 					</div>
 				</div>
