chairman's statement page. scroll snapping on homepage

--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
-	<title>Annual Report 2020 | Infosys</title>
+	<title> Chairman's Report | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
@@ -12,11 +12,14 @@
 <body>
 	<div class="navbar navbar-dark fixed-top">
 		<button class="text-white bg-theme-blue">&#9776;</button>
-		<a class="navbar-brand" href="#"><img src="infosys.svg"></a>
+		<div class="navbar-header d-flex align-items-center">
+			<a class="search" href="#"><img src="img/search.svg"></a>
+			<a href="index.html"><img src="img/infosys.svg"></a>
+		</div>
 		<div id="navigation" class="bg-white fixed-top">
 			<button class="bg-white">&times;</button>
 			<nav class="nav flex-column py-5 mt-5">
-				<a class="nav-link active" href="#">Home</a>
+				<a class="nav-link active" href="index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
 				<div class="collapse" id="nav_live_enterprise">
@@ -27,7 +30,7 @@
 						<a class="nav-link" href="#">Delivering perceptive experiences</a>
 					</div>
 				</div>
-				<a class="nav-link" href="#">Chairman’s Statement</a>
+				<a class="nav-link" href="chairmans-statement.html">Chairman’s Statement</a>
 				<a class="nav-link" href="#">Letter to the Shareholder</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_infosys_team">The Infosys Team</a>
 				<div class="collapse" id="nav_infosys_team">
@@ -44,27 +47,27 @@
 		</div>
 	</div>
 	<div class="homepage-wrapper">
-		<div id="hero" class="vh-100 vw-100 bg-theme-dark-blue bg-img-bottom-right">
+		<div id="hero" class="vh-100 vw-100 bg-theme-dark-blue bg-img-bottom-right scroll-stop">
 			<div class="d-flex justify-content-around h-100">
 				<div class="w-50-md d-flex flex-column justify-content-center h-100 text-white">
 					<h2>Being Resilient.</h2>
 					<h1 class="mb-4 font-weight-bold">That’s Live Enterprise.</h1>
-					<div class="subtitle">Annual report 2019-2020</div>
+					<div class="category-label">Annual report 2019-2020</div>
 				</div>
 				<div></div>
 			</div>
 		</div>
-		<div id="live_enterprise" class="text-white">
+		<div id="live_enterprise" class="text-white scroll-stop">
 			<div class="row no-gutters">
 				<div id="instincts" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
 					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
-						<div class="subtitle mt-md-5 mt-2">Live Enterprise</div>
+						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Next-level instincts, intelligence,  and intuition.</h2>
 					</div>
 				</div>
 				<div id="responding" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
 					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
-						<div class="subtitle mt-md-5 mt-2">Live Enterprise</div>
+						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Responding to opportunities with lightning-quick reflexes.</h2>
 					</div>
 				</div>
@@ -72,39 +75,39 @@
 			<div class="row no-gutters">
 				<div id="talent" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
 					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
-						<div class="subtitle mt-md-5 mt-2">Live Enterprise</div>
+						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">The talent to dream it, and the tech skills to do it.</h2>
 					</div>
 				</div>
 				<div id="checkmate" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
 					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
-						<div class="subtitle mt-md-5 mt-2">Live Enterprise</div>
+						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Staying ten steps ahead of demanding consumers. Checkmating competitors.</h2>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="people" class=" text-white">
+		<div id="people" class="text-white scroll-stop">
 			<div class="row no-gutters vh-100">
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-primary">
-					<div class="pb-md-5 p-5 pb-2">
-						<div class="subtitle">Chairman's message</div>
+					<a href="chairmans-statement.html" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
+						<div class="category-label">Chairman's message</div>
 						<h2>Thinking Resilience. Thinking Scale.</h2>
-						<div class="subtitle font-weight-bold">Nandan M. Nilekani</div>
+						<div class="category-label font-weight-bold">Nandan M. Nilekani</div>
 						<div class="arrow">&xrarr;</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-danger">
-					<div class="pb-md-5 p-5 pb-2">
-						<div class="subtitle">Letter to the Shareholder</div>
+					<a href="#" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
+						<div class="category-label">Letter to the Shareholder</div>
 						<h2>An exceptional year for Infosys</h2>
-						<div class="subtitle font-weight-bold">Salil Parekh</div>
+						<div class="category-label font-weight-bold">Salil Parekh</div>
 						<div class="arrow">&xrarr;</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
-		<div class="vw-100 vh-md-10 p-3 p-md-0 text-white bg-theme-blue d-flex justify-content-center align-items-center">
+		<div class="vw-100 vh-md-10 p-3 p-md-0 text-white bg-theme-blue d-flex justify-content-center align-items-center scroll-stop">
 			<h2 class="mb-0">Key Trends</h2>
 		</div>
 		<div id="trends">
