live enterprise pages

--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -4,33 +4,32 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title> Chairman's Report | Annual Report 2020</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/style.min.css">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/iamphill/Bootstrap-Offcanvas/master/dist/css/bootstrap.offcanvas.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.min.css">
 </head>
 <body>
 	<div class="navbar navbar-dark fixed-top">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
-			<a class="search" href="#"><img src="img/search.svg"></a>
-			<a href="index.html"><img src="img/infosys.svg"></a>
+			<a class="search" href="#"><img src="/img/search.svg"></a>
+			<a href="index.html"><img src="/img/infosys.svg"></a>
 		</div>
 		<div id="navigation" class="bg-white fixed-top">
 			<button class="bg-white">&times;</button>
 			<nav class="nav flex-column py-5 mt-5">
-				<a class="nav-link active" href="index.html">Home</a>
+				<a class="nav-link active" href="/index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
 				<div class="collapse" id="nav_live_enterprise">
 					<div class="nav flex-column">
-						<a class="nav-link" href="#">Intuitive Decisions</a>
+						<a class="nav-link" href="/live-enterprise/intuition.html">Intuitive Decisions</a>
 						<a class="nav-link" href="#">Building responsive value chains</a>
 						<a class="nav-link" href="#">Nurturing creative talent</a>
 						<a class="nav-link" href="#">Delivering perceptive experiences</a>
 					</div>
 				</div>
-				<a class="nav-link" href="chairmans-statement.html">Chairman’s Statement</a>
+				<a class="nav-link" href="/chairmans-statement.html">Chairman’s Statement</a>
 				<a class="nav-link" href="#">Letter to the Shareholder</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_infosys_team">The Infosys Team</a>
 				<div class="collapse" id="nav_infosys_team">
@@ -116,14 +115,14 @@
 					<div>
 						<h2 class="font-theme-blue font-weight-bold">Revenues</h2>
 						<div class="key text-body pb-3">(in crores)</div>
-						<img class="d-block img-fluid" src="img/Revenues.png">
+						<img class="d-block img-fluid" src="/img/Revenues.png">
 					</div>
 				</div>
 				<div class="col-md-6 vh-60 p-5 d-flex justify-content-center align-items-center bg-theme-dark-blue">
 					<div>
 						<h2 class="text-white font-weight-bold">Net Profit</h2>
 						<div class="key text-white pb-3">(in crores)</div>
-						<img class="d-block img-fluid" src="img/Net-Profit.png">
+						<img class="d-block img-fluid" src="/img/Net-Profit.png">
 					</div>
 				</div>
 			</div>
@@ -159,9 +158,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="https://cdn.rawgit.com/iamphill/Bootstrap-Offcanvas/master/dist/js/bootstrap.offcanvas.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/script.js"></script>
 </body>
 </html>
