fix href/src urls for everything

--- a/premedia/infosys/chairmans-statement.html
+++ b/premedia/infosys/chairmans-statement.html
@@ -4,32 +4,32 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title> Infosys | Annual Report 2020</title>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
 	<div class="navbar navbar-dark bg-theme-blue fixed-top">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
-			<a class="search" href="#"><img src="/img/search.svg"></a>
-			<a href="index.html"><img src="/img/infosys.svg"></a>
+			<a class="search" href="#"><img src="img/search.svg"></a>
+			<a href="index.html"><img src="img/infosys.svg"></a>
 		</div>
 		<div id="navigation" class="bg-white fixed-top">
 			<button class="bg-white">&times;</button>
 			<nav class="nav flex-column py-5 mt-5">
-				<a class="nav-link" href="/index.html">Home</a>
+				<a class="nav-link" href="index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
 				<div class="collapse" id="nav_live_enterprise">
 					<div class="nav flex-column">
-						<a class="nav-link" href="/live-enterprise/intuition.html">Intuitive Decisions</a>
+						<a class="nav-link" href="live-enterprise/intuition.html">Intuitive Decisions</a>
 						<a class="nav-link" href="#">Building responsive value chains</a>
 						<a class="nav-link" href="#">Nurturing creative talent</a>
 						<a class="nav-link" href="#">Delivering perceptive experiences</a>
 					</div>
 				</div>
-				<a class="nav-link active" href="/chairmans-statement.html">Chairman’s Statement</a>
+				<a class="nav-link active" href="chairmans-statement.html">Chairman’s Statement</a>
 				<a class="nav-link" href="#">Letter to the Shareholder</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_infosys_team">The Infosys Team</a>
 				<div class="collapse" id="nav_infosys_team">
@@ -57,7 +57,7 @@
 				<div class="category-label mt-md-5 mt-2">Chairman's statement</div>
 				<h1 class="bg-theme-blue text-white font-weight-bold p-3 my-3">Thinking Resilience. Thinking Scale.</h1>
 				<div class="image-container my-5">
-					<img class="img-fluid" src="/img/Nandan-Nilekani.jpg">
+					<img class="img-fluid" src="img/Nandan-Nilekani.jpg">
 					<div class="blockquote p-4 my-5 d-none d-lg-block">
 						<p class="font-theme-blue my-0">
 							The task is to build systems that can quickly scale and evolve to serve the changing needs of the enterprise and its workforce. That is the thinking that guides us as we navigate our clients to respond intuitively to opportunities, and help build value chains that are both efficient and robust to deal with unexpected challenges. That is the resilience our clients seek. That is Live Enterprise.
@@ -81,8 +81,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="/js/jquery.min.js"></script>
-	<script src="/js/bootstrap.bundle.min.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
