--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -4,32 +4,32 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title> Intution | Live Enterprise | Annual Report 2020</title>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.min.css">
 </head>
 <body>
 	<div class="navbar navbar-dark bg-theme-blue fixed-top">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
-			<a class="search" href="#"><img src="/img/search.svg"></a>
-			<a href="index.html"><img src="/img/infosys.svg"></a>
+			<a class="search" href="#"><img src="../img/search.svg"></a>
+			<a href="index.html"><img src="../img/infosys.svg"></a>
 		</div>
 		<div id="navigation" class="bg-white fixed-top">
 			<button class="bg-white">&times;</button>
 			<nav class="nav flex-column py-5 mt-5">
-				<a class="nav-link" href="/index.html">Home</a>
+				<a class="nav-link" href="../index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link active" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
 				<div class="collapse" id="nav_live_enterprise">
 					<div class="nav flex-column">
-						<a class="nav-link active" href="/live-enterprise/intuition.html">Intuitive Decisions</a>
+						<a class="nav-link active" href="../live-enterprise/intuition.html">Intuitive Decisions</a>
 						<a class="nav-link" href="#">Building responsive value chains</a>
 						<a class="nav-link" href="#">Nurturing creative talent</a>
 						<a class="nav-link" href="#">Delivering perceptive experiences</a>
 					</div>
 				</div>
-				<a class="nav-link" href="/chairmans-statement.html">Chairman’s Statement</a>
+				<a class="nav-link" href="../chairmans-statement.html">Chairman’s Statement</a>
 				<a class="nav-link" href="#">Letter to the Shareholder</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_infosys_team">The Infosys Team</a>
 				<div class="collapse" id="nav_infosys_team">
@@ -81,9 +81,9 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid h-100 d-block mx-auto" src="/img/intuition1.png">
+						<img class="img-fluid h-100 d-block mx-auto" src="../img/intuition1.png">
 						<div class="floating-image d-none d-lg-block">
-							<img class="img-fluid" src="/img/intuition2.png">
+							<img class="img-fluid" src="../img/intuition2.png">
 						</div>
 					</div>
 
@@ -92,7 +92,7 @@
 					</p>
 
 					<div class="image-container d-lg-none">
-						<img class="img-fluid w-75 d-block mx-auto my-4" src="/img/intuition2.png">
+						<img class="img-fluid w-75 d-block mx-auto my-4" src="../img/intuition2.png">
 					</div>
 
 					<p>
@@ -111,7 +111,7 @@
 							<div class="category-label mb-1">Mohammed Rafee Tarafdar</div>
 							<div>SVP – Unit Technology Officer</div>
 						</div>
-						<img src="/img/intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
+						<img src="../img/intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 
@@ -134,7 +134,7 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid" src="/img/intuition4.jpg">
+						<img class="img-fluid" src="../img/intuition4.jpg">
 					</div>
 
 					<p>
@@ -153,15 +153,15 @@
 							<div class="category-label mb-1">Balakrishna D.R.</div>
 							<div>SVP – Head, AI & Automation Services</div>
 						</div>
-						<img src="/img/intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
+						<img src="../img/intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	
-	<script src="/js/jquery.min.js"></script>
-	<script src="/js/bootstrap.bundle.min.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="../js/jquery.min.js"></script>
+	<script src="../js/bootstrap.bundle.min.js"></script>
+	<script src="../js/script.js"></script>
 </body>
 </html>
